[tool.poetry]
name = "poetry_update_all"
version = "0.1.3"
description = "update all poetry packge to latest, while ensuring --dev"
authors = ["Wonjoon Seol"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry-update-all = "poetry_update_all.app:update_all_packages"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
